# hello-flask

./: .dockerignore  .flake8  .gitignore  Dockerfile  LICENSE  Makefile  Pipfile  README.md  app.py  docker-compose.yml  docker-entrypoint  gunicorn.conf.py  hello-flask.ini  pyproject.toml  requirements.txt  setup.py
.github/workflows/: test.yml
nginx/: default.conf
scripts/: initial-python-dependencies
